--- a/project4.ipynb
+++ b/project4.ipynb
@@ -9,16 +9,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: google-generativeai in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (0.8.3)\n",
+      "Requirement already satisfied: google-ai-generativelanguage==0.6.10 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-generativeai) (0.6.10)\n",
+      "Requirement already satisfied: google-api-core in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-generativeai) (2.23.0)\n",
+      "Requirement already satisfied: google-api-python-client in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-generativeai) (2.154.0)\n",
+      "Requirement already satisfied: google-auth>=2.15.0 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-generativeai) (2.36.0)\n",
+      "Requirement already satisfied: protobuf in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-generativeai) (5.28.3)\n",
+      "Requirement already satisfied: pydantic in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-generativeai) (2.9.1)\n",
+      "Requirement already satisfied: tqdm in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-generativeai) (4.66.5)\n",
+      "Requirement already satisfied: typing-extensions in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-generativeai) (4.11.0)\n",
+      "Requirement already satisfied: proto-plus<2.0.0dev,>=1.22.3 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-ai-generativelanguage==0.6.10->google-generativeai) (1.25.0)\n",
+      "Requirement already satisfied: googleapis-common-protos<2.0.dev0,>=1.56.2 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-api-core->google-generativeai) (1.66.0)\n",
+      "Requirement already satisfied: requests<3.0.0.dev0,>=2.18.0 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-api-core->google-generativeai) (2.32.3)\n",
+      "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-auth>=2.15.0->google-generativeai) (5.5.0)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-auth>=2.15.0->google-generativeai) (0.4.1)\n",
+      "Requirement already satisfied: rsa<5,>=3.1.4 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-auth>=2.15.0->google-generativeai) (4.9)\n",
+      "Requirement already satisfied: httplib2<1.dev0,>=0.19.0 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-api-python-client->google-generativeai) (0.22.0)\n",
+      "Requirement already satisfied: google-auth-httplib2<1.0.0,>=0.2.0 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-api-python-client->google-generativeai) (0.2.0)\n",
+      "Requirement already satisfied: uritemplate<5,>=3.0.1 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-api-python-client->google-generativeai) (4.1.1)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from pydantic->google-generativeai) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.23.3 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from pydantic->google-generativeai) (2.23.3)\n",
+      "Requirement already satisfied: grpcio<2.0dev,>=1.33.2 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.10->google-generativeai) (1.68.0)\n",
+      "Requirement already satisfied: grpcio-status<2.0.dev0,>=1.33.2 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.10->google-generativeai) (1.68.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.0,!=3.0.1,!=3.0.2,!=3.0.3,<4,>=2.4.2 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from httplib2<1.dev0,>=0.19.0->google-api-python-client->google-generativeai) (3.1.4)\n",
+      "Requirement already satisfied: pyasn1<0.7.0,>=0.4.6 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from pyasn1-modules>=0.2.1->google-auth>=2.15.0->google-generativeai) (0.6.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (2.2.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from requests<3.0.0.dev0,>=2.18.0->google-api-core->google-generativeai) (2024.8.30)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install google-generativeai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +62,7 @@
     "import google.generativeai as genai\n",
     "\n",
     "#generate your own key on https://aistudio.google.com/apikey\n",
-    "gemini_api_key = \n",
+    "gemini_api_key = \"AIzaSyD9gOU2JVUl2dRXm2d_Ys3ADOvFt6ToNnk\"\n",
     "\n",
     "genai.configure(api_key=gemini_api_key)\n",
     "multimodal_model = genai.GenerativeModel(\"gemini-1.5-flash-002\")\n"
@@ -35,9 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'As a large language model, I don\\'t experience days in the same way humans do.  I don\\'t have feelings or personal experiences.  However, I\\'ve been busy processing information and responding to many user requests.  So, you could say my \"day\" has been productive!  How was yours?\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#recall that text prompting and image prompting are both supported\n",
     "model_response = multimodal_model.generate_content(\"hi, how was your day?\")\n",
@@ -46,9 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[2, 1]'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from PIL import Image\n",
     "\n",
@@ -59,16 +116,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "All model checkpoint layers were used when initializing TFRobertaForSequenceClassification.\n",
+      "\n",
+      "All the layers of TFRobertaForSequenceClassification were initialized from the model checkpoint at finiteautomata/bertweet-base-sentiment-analysis.\n",
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFRobertaForSequenceClassification for predictions without further training.\n",
+      "emoji is not installed, thus not converting emoticons or emojis into text. Install emoji: pip3 install emoji==0.6.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#using your BERT sentiment analysis code from project 3, repeat the process with the uiuc dataset\n"
+    "#using your BERT sentiment analysis code from project 3, repeat the process with the uiuc dataset\n",
+    "from transformers import pipeline\n",
+    "pipe = pipeline(\"text-classification\", model=\"finiteautomata/bertweet-base-sentiment-analysis\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The most common sentiment label is: NEU\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv(\"uiuc.csv\")\n",
+    "data['sentiment'] = data['text'].apply(lambda x: pipe(x[:100])[0]['label'])\n",
+    "most_common_sentiment = data['sentiment'].mode()[0]\n",
+    "print(f\"The most common sentiment label is: {most_common_sentiment}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +608,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "is310",
    "language": "python",
    "name": "python3"
   },
@@ -530,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
